--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-reveal": "^1.2.2",
     "react-scripts": "5.0.0",
+    "swiper": "^8.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
